Crud added for user management

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -22,9 +22,12 @@
         </div>
 
         <div class="form-group" th:class="${#fields.hasErrors('username')} ? 'form-group has-error' : 'form-group'">
+
+            <input type="hidden" th:field="*{id}"/>
+            <input type="hidden" th:field="*{version}"/>
             <label for="username" class="col-sm-2 control-label">Username:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="username" id="username"/>
+                <input type="text" class="form-control" th:field="*{username}"/>
                 <span class="help-block" th:if="${#fields.hasErrors('username')}">
                     <ul>
                         <li th:each="err : ${#fields.errors('username')}" th:text="${err}"/>
@@ -36,7 +39,7 @@
         <div class="form-group" th:class="${#fields.hasErrors('password')} ? 'form-group has-error' : 'form-group'">
             <label for="password" class="col-sm-2 control-label">Password:</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" name="password" id="password"/>
+                <input type="password" class="form-control" th:field="*{password}"/>
                 <span class="help-block" th:if="${#fields.hasErrors('password')}">
                     <ul>
                         <li th:each="err : ${#fields.errors('password')}" th:text="${err}"/>
@@ -66,7 +69,7 @@
                         <li th:each="currentRole : ${roles}">
                             <input type="checkbox" th:field="*{theRoles}" th:value="${currentRole.name}" />
                             <label th:for="${#ids.prev('theRoles')}"
-                                   th:text="${currentRole.name}">Heating</label>
+                                   th:text="${currentRole.name}">Role</label>
                         </li>
                     </ul>
                 </div>
@@ -80,6 +83,8 @@
                 <button type="submit" class="btn btn-primary active">Register</button>
             </div>
         </div>
+
+
 
     </form>
 
