--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,15 +2,21 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org">
 <head>
 	<title tiles:fragment="title">Messages : Create</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
+	th:href="@{css/bootstrap.min.css}"/>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+	th:src="@{js/bootstrap.min.js}"></script>
 </head>
 <body>
 
 
 	<div class="container">
 
-	<form name="f" th:action="@{/login}" method="post">
+		<div class="jumbotron">
+			<h1>Please log in</h1>
+		</div>
+
+	<form class="form-horizontal" name="f" th:action="@{/login}" method="post">
 
 		<div th:if="${param.error}" class="alert alert-danger">
 			<p>Incorrect username and password</p>
@@ -37,15 +43,22 @@
 
 		<div class="form-group">
 
-			<div class="col-sm-10">
-				<button type="submit" class="btn btn-primary btn-lg active">Log in</button>
+			<div class="col-sm-10 col-sm-offset-2">
+				<button type="submit" class="btn btn-primary active">Log in</button>
 			</div>
 		</div>
 
 		<div class="form-group">
 
-			<div class="col-sm-10">
-				<h4><a th:href="${'/registration'}">Create an account</a></h4>
+			<div class="col-sm-10 col-sm-offset-2">
+				<a th:href="@{'user/forgot'}">Forgot password?</a>
+			</div>
+		</div>
+
+		<div class="form-group">
+
+			<div class="col-sm-10 col-sm-offset-2">
+				<h4><a th:href="${'/user/register'}">Create an account</a></h4>
 			</div>
 		</div>
 
