--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,11 +19,11 @@
 	<form class="form-horizontal" name="f" th:action="@{/login}" method="post">
 
 		<div th:if="${param.error}" class="alert alert-danger">
-			<p>Incorrect username and password</p>
+			<p th:text="${loginInvalidMessage}">Invalid</p>
 		</div>
 
 		<div th:if="${param.logout}" class="alert alert-success">
-			<p>You have been logged out</p>
+			<p th:text="${logoutMessage}">Logged out</p>
 		</div>
 
 		<div class="form-group">
