--- a/src/main/resources/templates/admin/course/add.html
+++ b/src/main/resources/templates/admin/course/add.html
@@ -73,10 +73,10 @@
         <div class="form-group">
             <label for="category" class="col-sm-2 control-label">Category:</label>
             <div class="col-sm-10">
-                <select name="category">
-                    <option>First</option>
-                    <option>Second</option>
-                    <option>Third</option>
+                <select th:field="*{category}">
+                    <option th:each="category : ${categories}"
+                            th:value="${category.name}"
+                            th:text="${category.name}">Wireframe</option>
                 </select>
             </div>
         </div>
