--- a/src/main/resources/templates/admin/course/course-list.html
+++ b/src/main/resources/templates/admin/course/course-list.html
@@ -11,40 +11,23 @@
 <body>
 
 
-<div class="container form-hori">
+<div class="container">
 
-    <form class="form-horizontal" name="f" th:object="${userForm}" th:action="@{/user/register}" method="post">
+    <div th:class="jumbotron">
+        <h1>Courses</h1>
+    </div>
 
-
-
-
+    <a th:href="@{/admin/course/add}">Add new course</a>
         <br/>
-        <div sec:authorize="isAuthenticated() and hasRole('ROLE_ADMIN')" class="form-group">
-            <label for="roles" class="col-sm-2 control-label">Roles:</label>
+       <!-- <div sec:authorize="isAuthenticated() and hasRole('ROLE_ADMIN')" class="form-group"> -->
             <div class="col-sm-10">
-                <ul>
-                    <li th:each="currentRole : ${roles}">
-                        <input type="checkbox" th:field="*{theRoles}" th:value="${currentRole.name}" />
-                        <label th:for="${#ids.prev('theRoles')}"
-                               th:text="${currentRole.name}">Role</label>
+                <ul th:each="currentCourse : ${courses}">
+                    <li>
+                        <h2><a href="#" ><span th:text="${currentCourse.title}"></span></a></h2>
                     </li>
                 </ul>
             </div>
-        </div>
-
-
-
-        <div class="form-group">
-
-            <div class="col-sm-10 col-sm-offset-2">
-                <button type="submit" class="btn btn-primary active">Register</button>
-            </div>
-        </div>
-
-
-
-    </form>
-
+      <!--  </div> -->
 </div>
 </body>
 </html>
