File upload with it's type and title path added.

--- a/src/main/resources/templates/lecturer/post.html
+++ b/src/main/resources/templates/lecturer/post.html
@@ -10,6 +10,28 @@
 <body>
 
 
+<div th:if="${message}">
+    <h2 th:text="${message}"/>
+</div>
+
+<div>
+    <form method="POST" enctype="multipart/form-data" th:action="@{/lecturer/course/post}">
+        <table>
+            <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
+            <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
+        </table>
+    </form>
+</div>
+
+<div>
+    <ul>
+        <li th:each="file : ${files}">
+            <a th:href="${file}" th:text="${file}" />
+        </li>
+    </ul>
+</div>
+
+
 <div class="container">
 
     <div th:class="jumbotron">
