--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -1,26 +1,71 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
+          th:href="@{'/css/bootstrap.min.css'}"/>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            th:src="@{'/js/bootstrap.min.js'}"></script>
+</head>
 <body>
+
 
 <div th:if="${message}">
     <h2 th:text="${message}"/>
 </div>
 
-<div>
-    <form method="POST" enctype="multipart/form-data" th:action="@{/file/upload}">
-        <table>
-            <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
-            <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
-        </table>
+<div class="container">
+
+    <div th:class="jumbotron">
+        <h1>Add post</h1>
+    </div>
+
+
+    <form class="form-horizontal" name="f" th:object="${post}" method="POST"
+          enctype="multipart/form-data" th:action="@{/lecturer/course/post}">
+
+        <div class="form-group">
+
+            <label for="title" class="col-sm-2 control-label">Title:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" th:field="*{title}"/>
+
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="type" class="col-sm-2 control-label">Type:</label>
+            <div class="col-sm-10">
+                <select name="type" id="type">
+                    <option>Lecture</option>
+                    <option>Assignment</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="exampleInputFile" class="col-sm-2 control-label">File input</label>
+            <div class="col-sm-10 col-sm-offset-2">
+                <input type="file" id="exampleInputFile" name="file"/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-10 col-sm-offset-2">
+                <button type="submit" class="btn btn-primary active">Post</button>
+            </div>
+        </div>
+
     </form>
-</div>
 
-<div>
-    <ul>
-        <li th:each="file : ${files}">
-            <a th:href="${file}" th:text="${file}" />
-        </li>
-    </ul>
-</div>
+    <div>
+        <ul>
+            <li th:each="file : ${files}">
+                <a th:href="${file}" th:text="${file}" />
+            </li>
+        </ul>
+    </div>
 
+</div>
 </body>
 </html>
