minor refactoring: Post -> CourseContentPost

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -80,7 +80,7 @@
 
 
 	<!--
-	<form name="f" th:action="@{/login}" method="post">
+	<form name="f" th:action="@{/login}" method="coursePost">
 
 		<div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
 			<p th:text="Incorrect credentials">Error message</p>
