--- a/src/main/resources/templates/admin/course/course-list.html
+++ b/src/main/resources/templates/admin/course/course-list.html
@@ -17,7 +17,7 @@
         <h1>Courses</h1>
     </div>
 
-    <a th:href="@{/admin/course/add}">Add new course</a>
+    <h3><a th:href="@{/admin/course/add}">Add new course</a></h3>
         <br/>
        <!-- <div sec:authorize="isAuthenticated() and hasRole('ROLE_ADMIN')" class="form-group"> -->
             <div class="col-sm-10">
