--- a/src/main/resources/templates/lecturer/course-content-list.html
+++ b/src/main/resources/templates/lecturer/course-content-list.html
@@ -25,13 +25,19 @@
     </div>
 
 
-    <a th:href="@{'/lecturer/course/'+${courseId}+'/add'}">Add post</a>
+    <h3><a class="btn btn-primary" th:href="@{'/lecturer/course/'+${courseId}+'/add'}">Add post</a></h3>
 
     <div th:each="post : ${posts}">
-        <h3 th:text="${post.title}"></h3>
-        <p th:text="${post.description}"></p>
-        <a href="#">Lecture 1</a>
+        <div class="well">
+            <h3 th:text="${post.title}"></h3>
+            <p th:text="${post.description}"></p>
+            <a th:href="${post.filePath}"><span th:text="${post.fileName}"></span></a>
+        </div>
+
+
     </div>
+
+
 
 
 </div>
