--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -1,56 +1,77 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org"
       xmlns:sec="http://www.w3.org/1999/xhtml">
-<head>
-    <title tiles:fragment="title">Messages : Create</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<head th:substituteby="fragments/admin-main :: head">
 </head>
 <body>
 
+<div id="wrapper">
 
-<div class="container">
+    <div th:replace="fragments/admin-main :: main">
+    </div>
 
-    <div class="col-md-6">
-        <H2>Users</H2>
+    <div id="page-wrapper">
 
-        <a th:href="@{/user/register}">Register new user</a>
+        <div id="container-fluid">
 
-        <table class="table table-bordered">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1 class="page-header">Users' List</h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
 
-            <thead>
-            <td>Number</td>
-            <td>Username</td>
-            <td>Roles</td>
-            <td>Action</td>
-            </thead>
+            <br/>
 
-            <th:block th:each="user, count : ${users}">
+            <div class="row">
 
-                <tr>
+                <div class="col-md-8 col-md-offset-2">
 
+                    <a th:href="@{/user/register}" class="btn btn-primary">+ Register new user</a>
 
-                    <td th:text="${count.count}">0</td>
-                    <td th:text="${user.username}"></td>
-                    <td>
+                    <table class="table table-bordered table-striped">
+
+                        <tr class="success">
+                        <td>Number</td>
+                        <td>Username</td>
+                        <td>Roles</td>
+                        <td>Action</td>
+                        </tr>
+
+                        <th:block th:each="user, count : ${users}">
+
+                            <tr class="info">
+
+                                <td th:text="${count.count}">0</td>
+                                <td th:text="${user.username}"></td>
+                                <td>
                 <span th:each="role : ${user.roles}">
                 [<span th:text="${role.name + ''}"></span>]
                 </span>
-                    </td>
-                   <!-- <td><a th:href="@{/user/delete/{id}(id=${user.id})}">Delete</a></td> -->
-                    <td><a th:href="@{'/user/delete/' + ${user.id}}" onclick="return confirm('Are you sure want to delete this user?')">Delete</a>
-                    <a th:href="@{'user/edit/' + ${user.id}}">Edit</a>
-                    </td>
+                                </td>
+                                <!-- <td><a th:href="@{/user/delete/{id}(id=${user.id})}">Delete</a></td> -->
+                                <td><a th:href="@{'/user/delete/' + ${user.id}}" onclick="return confirm('Are you sure want to delete this user?')">Delete</a>
+                                    <a th:href="@{'user/edit/' + ${user.id}}">Edit</a>
+                                </td>
 
-                </tr>
+                            </tr>
 
-            </th:block>
+                        </th:block>
 
-        </table>
+                    </table>
+
+
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
 
-
 </div>
+
+<th:block th:substituteby="fragments/admin-main :: foot"></th:block>
 </body>
 </html>
