--- a/src/main/resources/templates/admin/course/course-list.html
+++ b/src/main/resources/templates/admin/course/course-list.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Blank</h1>
+                    <h1 class="page-header">List of Courses</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
