--- a/src/main/resources/templates/lecturer/course/add-content.html
+++ b/src/main/resources/templates/lecturer/course/add-content.html
@@ -1,64 +1,92 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org"
       xmlns:sec="http://www.w3.org/1999/xhtml">
-<head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
-          th:href="@{'/css/bootstrap.min.css'}"/>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            th:src="@{'/js/bootstrap.min.js'}"></script>
+
+
+<head th:substituteby="fragments/admin-main :: head">
+
 </head>
 <body>
 
 
-<div th:if="${message}">
-    <h2 th:text="${message}"/>
-</div>
+<div id="wrapper">
 
-<div class="container">
+    <div th:replace="fragments/admin-main :: main">
+    </div>
 
-    <div th:class="jumbotron">
-        <h1>Add post</h1>
+    <div id="page-wrapper">
+
+        <div id="container-fluid">
+
+
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1 class="page-header">Add Post</h1>
+                    <div th:if="${message}">
+                        <h3 th:text="${message}"/>
+                    </div>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+
+
+            <br/>
+
+            <div class="row">
+
+                <div class="col-md-8 col-md-offset-2">
+
+
+                    <br/>
+
+                    <form th:object="${post}" method="POST" enctype="multipart/form-data" th:action="@{'/lecturer/course/'+${courseId}+'/add'}">
+
+                        <div class="form-group">
+                            <label for="title">Title <span class="require">*</span></label>
+                            <input type="text" class="form-control" id="title" th:field="*{title}"/>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="description">Description</label>
+                            <textarea rows="5" class="form-control" th:field="*{description}" ></textarea>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label for="exampleInputFile">Title</label>
+                            <input type="file" id="exampleInputFile" name="file"/>
+                        </div>
+
+                        <div class="form-group">
+                            <p><span class="require">*</span> - required fields</p>
+                        </div>
+
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">
+                                Create
+                            </button>
+
+                            <a th:href="@{'/lecturer/course/' + ${courseId} + '/list'}" class="btn btn-default">Cancel</a>
+
+                        </div>
+
+                    </form>
+                </div>
+
+            </div>
+
+        </div>
+
     </div>
 
 
-    <form class="form-horizontal" name="f" th:object="${post}" method="POST"
-          enctype="multipart/form-data" th:action="@{'/lecturer/course/'+${courseId}+'/add'}">
-
-        <div class="form-group">
-
-            <label for="title" class="col-sm-2 control-label">Title:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" th:field="*{title}"/>
-
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="description" class="col-sm-2 control-label">Description:</label>
-            <div class="col-sm-10">
-
-                <textarea class="form-control" th:field="*{description}"></textarea>
-
-            </div>
-        </div>
 
 
-
-        <div class="form-group">
-            <label for="exampleInputFile" class="col-sm-2 control-label">File input</label>
-            <div class="col-sm-10 col-sm-offset-2">
-                <input type="file" id="exampleInputFile" name="file"/>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-sm-10 col-sm-offset-2">
-                <button type="submit" class="btn btn-primary active">Post</button>
-            </div>
-        </div>
-
-    </form>
 
 </div>
+
+<th:block th:substituteby="fragments/admin-main :: foot"></th:block>
 </body>
+
+
 </html>
