--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,7 +18,7 @@
 
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1 class="page-header">Register User</h1>
+                    <h1 class="page-header" th:text="${pageTitle}">Register User</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
