Basic Event Management added.

--- a/src/main/resources/templates/fragments/admin-main.html
+++ b/src/main/resources/templates/fragments/admin-main.html
@@ -295,7 +295,7 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
+                        <a th:href="@{/admin/event/list}"><i class="fa fa-table fa-fw"></i> Events</a>
                     </li>
                     <li>
                         <a th:href="@{/admin/course/list}"><i class="fa fa-edit fa-fw"></i> Courses</a>
