Comment added to CourseContentPost.

--- a/src/main/resources/templates/fragments/admin-main.html
+++ b/src/main/resources/templates/fragments/admin-main.html
@@ -45,7 +45,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+            <a class="navbar-brand" href="#">Lecture Management System</a>
         </div>
         <!-- /.navbar-header -->
 
@@ -192,7 +192,7 @@
                     <li>
                         <a href="#">
                             <div>
-                                <i class="fa fa-comment fa-fw"></i> New Comment
+                                <i class="fa fa-description fa-fw"></i> New Comment
                                 <span class="pull-right text-muted small">4 minutes ago</span>
                             </div>
                         </a>
@@ -300,6 +300,11 @@
                     <li>
                         <a th:href="@{/admin/course/list}"><i class="fa fa-edit fa-fw"></i> Courses</a>
                     </li>
+
+                    <li>
+                        <a th:href="@{/admin/course/categories}"><i class="fa fa-edit fa-fw"></i> Course Categories</a>
+                    </li>
+
                     <li>
                         <a th:href="@{/users}"><i class="fa fa-user fa-fw"></i> Users</a>
                     </li>
